error page works navbar impl as shared content between pages